Fixed a bunch of broken stuff

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,78 @@
-.tmux.conf
+# Use powerline for maximum 1337
+
+# Misc. useful stuff
+
+set -g prefix ^a
+set -g status-keys vi
+set -g mode-keys vi
+set -g mode-mouse on
+set -g default-shell /bin/zsh
+set -g default-command /bin/zsh
+set -g set-titles off
+set -g repeat-time 100
+set -g default-terminal "screen-256color"
+set -g status-interval 1
+set -g visual-activity on
+set -g monitor-activity off
+set -sg repeat-time 200
+set -g default-command "reattach-to-user-namespace -l zsh"
+
+# Unbinding
+
+unbind s
+unbind w
+
+# Keybinds
+
+bind q split-window
+bind s split-window -h
+bind a previous-window
+bind x kill-pane
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind ^h resize-pane -L
+bind ^j resize-pane -D
+bind ^k resize-pane -U
+bind ^l resize-pane -R
+
+bind w choose-session
+
+# Windows/panes
+
+set -g base-index 1
+
+set -g mouse-select-pane on
+set -g pane-border-fg black
+set -g pane-active-border-fg blue
+set -g display-panes-colour white
+set -g display-panes-active-colour blue
+set -g display-panes-time 1000
+set -g automatic-rename on
+set -g utf8 on
+
+set -g status-justify right
+set -g status-bg default
+set -g status-fg default
+set -g status-interval 5
+
+set -g message-attr bold
+set -g message-fg black
+set -g message-bg yellow
+
+# Window list
+set -g window-status-current-fg blue
+set -g window-status-current-attr none
+set -g window-status-format '| #[fg=white]#W'
+set -g window-status-current-format '#[fg=cyan]> #W'
+
+# Left
+# set -g status-left "#(~/tmux-statusbar-daemon/run.rb left)" 
+set -g status-left " "
+set -g status-left-length 60
+
+# Right
+set -g status-right '#[fg=white]|%l:%M'
